test/libsolidity/syntaxTests/nameAndTypeResolution/062_base_constructor_arguments_override.sol
contract A { constructor(uint a) { } }
contract B is A { constructor(bytes4 a, bytes28 b) { } }
// ----
// TypeError 3415: (39-95): No arguments passed to the base constructor. Specify the arguments or mark "B" as abstract.
